fix some layout problems

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -348,7 +348,7 @@ html, body, .notepad-post-container, .notepad-post-header {
       margin: 0;
       padding: 0;
       font-family: "Montserrat", sans-serif;
-      font-weight: 700;
+      font-weight: 400;
       text-transform: uppercase; }
     .notepad-author-info .notepad-post-author > p {
       font-size: 1.125rem; }
@@ -399,8 +399,8 @@ html, body, .notepad-post-container, .notepad-post-header {
   .notepad-page-title h1,
   .notepad-post-title-simple h1 {
     color: black;
-    font-weight: 800;
-    font-size: 3.125rem;
+    font-weight: 400;
+    font-size: 2.125rem;
     padding: 0;
     padding-top: 5rem;
     padding-bottom: 4.375rem;
@@ -411,7 +411,7 @@ html, body, .notepad-post-container, .notepad-post-header {
     @media only screen and (min-width: 40.063em) {
       .notepad-page-title h1,
       .notepad-post-title-simple h1 {
-        font-size: 4.375rem;
+        font-size: 3.375rem;
         padding-top: 5.625rem;
         padding-bottom: 5.625rem; } }
     @media only screen and (min-width: 70em) {
@@ -422,7 +422,7 @@ html, body, .notepad-post-container, .notepad-post-header {
     @media only screen and (min-width: 90em) {
       .notepad-page-title h1,
       .notepad-post-title-simple h1 {
-        font-size: 5.3125rem;
+        font-size: 3.3125rem;
         padding-top: 8.125rem;
         padding-bottom: 8.125rem; } }
   .notepad-page-title .notepad-post-meta-simple,
@@ -536,9 +536,6 @@ pre {
   padding: 5px;
 }
 
-code {
-  font-size: 0.9375rem;
-  line-height: 1.2;}
 
 iframe {
   border: 0; }
